crates/paladin-tui/tests/snapshots/destroy_snapshots__snapshot_startup_error_footer_hint.snap
---
source: crates/paladin-tui/tests/destroy_snapshots.rs
expression: "render_to_text(&state, 80, 12)"
---
┌ Paladin — startup error ─────────────────────────────────────────────────────┐
│                                                                              │
│  Vault path: /home/u/.local/share/paladin/vault.bin                          │
│                                                                              │
│  vault header is corrupt                                                     │
│                                                                              │
│  Press Esc, q, or Ctrl-C to quit.                                            │
│  Ctrl+Shift+D delete vault                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
