crates/paladin-tui/tests/snapshots/destroy_snapshots__snapshot_status_line_vault_deleted.snap
---
source: crates/paladin-tui/tests/destroy_snapshots.rs
expression: "render_to_text(&state, 80, 16)"
---
┌ Paladin — create vault ──────────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /home/u/.local/share/paladin/vault.bin                               │
│                                                                              │
│  Choose vault protection:                                                    │
│                                                                              │
│  ▶ Encrypted (recommended) — protect this vault with a passphrase.           │
│    Plaintext (insecure) — store secrets unencrypted on disk.                 │
│                                                                              │
│  ↑/↓ or j/k to select; Enter to continue; q or Esc to quit.                  │
│                                                                              │
│  Vault deleted.                                                              │
│                                                                              │
│  Ctrl+Shift+D delete vault                                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
