crates/paladin-tui/tests/snapshots/destroy_snapshots__snapshot_unlock_footer_hint.snap
---
source: crates/paladin-tui/tests/destroy_snapshots.rs
expression: "render_to_text(&state, 80, 12)"
---
┌ Paladin — unlock ────────────────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /home/u/.local/share/paladin/vault.bin                               │
│                                                                              │
│  Passphrase:                                                                 │
│                                                                              │
│  Press Enter to unlock; Esc or Ctrl-C to quit.                               │
│  Ctrl+Shift+D delete vault                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
